# Vermeer

./: README.md  pyproject.toml  tutorial.ipynb  vermeer.yaml
scripts/eval/: run_eval_pipeline.sh
scripts/prepare_data/: download_images_parallel.py  hpa_stratified_preprocessing_final.py
vermeer/autoregressive/models/: generate_ca.py  gpt_ca.py  gpt_ca_hf.py
vermeer/autoregressive/train/: extract_codes_ca.py  train_ca.py  train_ca_fsdp.py
vermeer/benchmarking/: benchmark_celle2.py  benchmark_pups.py  celle2_benchmark.sh  eval_model.py  eval_model.sh  process_llamagen_like_celle2.py  process_llamagen_like_pups.py  process_llamagen_like_pups.sh  pups_benchmark.sh
vermeer/dataset/: build.py  ca_image.py  prepare_protein_prefix.py
vermeer/evaluations/ca_esm/: evaluate_fid.py  evaluate_intra_nuclear_prop.py  evaluate_mse.py  evaluate_protein_val_loss.py  evaluate_subcell.py  evaluation_protein_loc.py  generate_images.py
vermeer/utils/: lr_control.py  optim.py
